fixes jumpy nav titles

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -13,7 +13,7 @@ nav a {
 }
 
 nav a:hover {
-  font-size: 2rem;
+  font-size: 1.25rem;
   color: #007BFF;
   font-weight:bolder;
 }
